@cfiliault having an issue with drawer navigation after implementing settings. my navController defined in MainActivity wont work properly once I added the code on line 61.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,18 @@
     <string name="kingHeight">85 - 95cm</string>
     <string name="kingWeight">9.3 - 17kg</string>
     <string name="kingDescription">The second largest species. There are 2 subspecies found in the South Atlantic, and South Indian Ocean.</string>
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
 </resources>
